--- a/package.json
+++ b/package.json
@@ -8,11 +8,7 @@
     "nodemon": "^2.0.1",
     "socket.io": "^2.3.0"
   },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-0": "^6.24.1"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
