working multiple rooms

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "socket-example",
   "version": "1.0.0",
   "description": "",
-  "main": "socket-example.js",
+  "main": "app.js",
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.1",
